# circuitbent-speech

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  homer.filtergraph
analysis_and_graphs/: curve.py  debug_printout.txt  graph_phoneme_list.py  sinetab.py
espeak-ng/cmake/: config.cmake
espeak-ng/src/: CMakeLists.txt  espeak-ng.c
espeak-ng/src/include/espeak-ng/: common.h  encoding.h  (+2 more)
espeak-ng/src/libespeak-ng/: common.c  common.h  compiledata.c  compiledict.c  dictionary.c  dictionary.h  espeak_api.c  espeak_command.c  espeak_command.h  event.c  event.h  fifo.c  fifo.h  intonation.c  intonation.h  klatt.c  klatt.h  langopts.c  langopts.h  mbrola.h  numbers.c  numbers.h  phoneme.h  phonemelist.c  phonemelist.h  readclause.c  readclause.h  sPlayer.c  sPlayer.h  setlengths.c  setlengths.h  sintab.h  soundicon.c  soundicon.h  spect.c  spect.h  speech.c  speech.h  ssml.c  ssml.h  (+13 more)
juceThreadInterface/: CMakeLists.txt  juiceThreadInterface.cpp  juiceThreadInterface.h
source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/dsp/: EspeakThread.cpp  EspeakThread.h  HomerProcessor.cpp  HomerProcessor.h  Resampler.cpp  Resampler.h
source/gui/: BendsPanel.cpp  BendsPanel.h  InvertedLinearVerticalSlider.h  InvisibleSlider.cpp  InvisibleSlider.h  LyricEditor.cpp  LyricEditor.h  LyricLineEditor.cpp  LyricLineEditor.h  LyricsEditor.cpp  LyricsEditor.h  RescaleEditor.cpp  RescaleEditor.h  TitlePanel.cpp  TitlePanel.h
source/state/: HomerState.cpp  HomerState.h  RescaleParameters.cpp  RescaleParameters.h
tests/: PluginBasics.cpp
